--- a/estilos.css
+++ b/estilos.css
@@ -1,15 +1,16 @@
 *{
-    margin: 0;
-    padding: 0;
+    margin: 10;
+    padding: 10;
+    
 }
 
-
 .divPrincipal{
-    background-color: aquamarine;
-    width: 700px;
-    height: 450px;
+    /* background-color: aquamarine; */
+    margin: 20%;
+    width: 1000px;
+    height: 650px;
     display: flex; 
-    justify-content: space-around;
+    justify-content: space-between;
        
 }
 
@@ -18,16 +19,43 @@
     position: relative;
     overflow: hidden;
     border-radius: 3%;
+
+}
+
+.seccionRedes{
+    display: column;    
+}
+
+.signIn{
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center;
+    color: rgb(20, 20, 20);    
+}
+.divIconosRedes{
+    display: flex;
+    justify-content: center;
+    text-align: center;  
+}
+
+.iconoRed{
+    border: 0.1px solid rgb(202, 198, 198);
+    border-radius: 10%;
+    width: 17%;    
+    margin: 4%;
+    padding: 2%;
+    display: flex;
+    justify-content: center;
 }
 
 .formulario{
-    border-color: rgb(150, 134, 134);
-    
+    width: 400px;
+    border: 0.1px solid rgb(202, 198, 198);
+    box-shadow: 0.1px 0px 0px 0px rgb(158, 156, 156);
+    border-radius: 3%;
 }
 
-.divIconosRedes{
-    display: flex;
-}
+
 
 .divBotonesMailNumber{
     display: flex;
