--- a/estilos.css
+++ b/estilos.css
@@ -123,3 +123,17 @@
     border: none;
     border-radius: 7%;
 }
+
+/* BOTON SIGN IN */
+
+.boton3{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(231, 99, 22);
+    width: 180px;
+    border: none;
+    border-radius: 7%;
+}
+
