--- a/estilos.css
+++ b/estilos.css
@@ -2,6 +2,7 @@
     margin: 10;
     padding: 10;  
     font-family: Arial, Helvetica, sans-serif;  
+    
 }
 
 .divPrincipal{
@@ -126,6 +127,36 @@
     border-radius: 7%;
 }
 
+/* INPUTS FORMULARIO */
+
+.inputsFormulario{
+    width: 400px;
+    padding: 30px;
+    /* margin: auto;  */ 
+      
+}
+.inputsFormulario p{
+    font-size: 12px;
+    color: #8d8c89;
+    font-weight: bold;    
+    margin-bottom: 5px;    
+}
+::placeholder{
+    color: #adaaa2;
+}
+
+.controls{
+    height: 20px;
+    width: 75%;
+    padding: 7px;
+    border-radius: 7px;
+    border: 2px solid rgb(190, 187, 187);
+    box-shadow: 2px -2px 10px rgba(185, 183, 183, 0.5);
+    font-size: 11px;
+    color: #6e6a6a;
+}
+
+
 /* BOTON SIGN IN */
 
 .boton3{
@@ -137,10 +168,4 @@
     width: 180px;
     border: none;
     border-radius: 7%;
-}
-
-/* INPUTS FORMULARIO */
-
-.inputsFormulario{
-    left: 25px;   
 }
