listo el link forgoten your password

--- a/estilos.css
+++ b/estilos.css
@@ -171,6 +171,9 @@
 ::placeholder{
     color: #adaaa2;
 }
+.inputsFormulario a{
+    text-decoration: none;
+}
 
 .controls{
     height: 20px;
@@ -181,7 +184,9 @@
     box-shadow: 2px -2px 10px rgba(185, 183, 183, 0.5);
     font-size: 11px;
     color: #6e6a6a;
+    
 }
+
 
 
 /* BOTON SIGN IN */
