--- a/estilos.css
+++ b/estilos.css
@@ -174,6 +174,20 @@
 .inputsFormulario a{
     text-decoration: none;
 }
+.input-wrapper {
+    position: relative;
+    width: 400px;
+ }
+ .input-icon {
+    color: #817f7c;    
+    position: absolute;
+    width: 20px;
+    height: 15px;
+    left: 290px;
+    top: 50%;
+    transform: translateY(-50%);
+ }
+ 
 
 .controls{
     height: 20px;
